# bc_python_aula19

./: .gitignore  Dockerfile  README.md  database.py  main.py  models.py  pyproject.toml  test.db
